# koinos-cpp-dependencies

./: .travis.yml  CMakeLists.txt  Dockerfile
ci/: build.sh  install.sh
cmake/Hunter/: config.cmake
tools/ci/: build.sh  install.sh
